---
source: src/tree.rs
expression: dot
---
digraph g {
	page_1:1 -> page_2:head;
	page_2 [shape=record, label="<head>Level 21|<0>·|0"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 22|<1>·|1|<high_page>·"]
	page_1:high_page -> page_3:head [fontcolor=red color=red label="high page"];

	page_3 [shape=record, label="<head>Level 21|<3>·|3|<high_page>·"]
	page_3:high_page -> page_4:head [fontcolor=red color=red label="high page"];

	page_4 [shape=record, label="<head>Level 0|<6>·|6"]

}

